<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fortaleza Oculta</string>
    <string name="capturou_jogador">Jogador capturado</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="senha2">Redigite a senha</string>
    <string name="desconhecido">Desconhecido</string>
    <string name="entrar">Entrar</string>
    <string name="enviando_arquivo">Enviando arquivo</string>
    <string name="autenticando">Fazendo login</string>
    <string name="title_activity_tela_principal">Jogo Pervasivo</string>
    <string name="OK" translatable="false">OK</string>
    <string name="mostrar_tudo">Mostrar todas</string>
    <string name="falha_de_conexao">Falha na conexão com o servidor</string>
    <string name="falha_de_autenticacao">Usuário ou senha inválidos</string>
    <string name="ainda_nao_cadastrado">Ainda não sou cadastrado</string>
    <string name="title_activity_novo_usuario" translatable="false">Cadastrar novo usuário</string>
    <string name="redigite_senha">Digite a senha novamente</string>
    <string name="novo_usuario">Novo usuário</string>
    <string name="verifique_os_campos">Verifique os campos acima</string>
    <string name="ativar_conexao">Ative uma conexão de dados</string>
    <string name="salvando">Salvando</string>
    <string name="salvar">Salvar</string>
    <string name="servidor">Servidor</string>
    <string name="porta">Porta</string>
    <string name="usuario_ja_cadastrado">Usuário já cadastrado</string>
    <string name="usuario_cadastrado">Usuário cadastrado com sucesso</string>
    <string name="novo_jogo">Novo Jogo</string>
    <string name="jogos_disponiveis">Jogos disponíveis</string>
    <string name="inventario">Inventário</string>
    <string name="missao_atual">Missão atual</string>
    <string name="missoes">Missões</string>
    <string name="multimidia">Multimídia</string>
    <string name="camera">Câmera</string>
    <string name="video">Vídeo</string>
    <string name="audio">Áudio</string>
    <string name="mais_opcoes">Mais opções</string>
    <string name="mapa">Mapa</string>
    <string name="chat">Chat de equipe</string>
    <string name="ver_equipe">Ver equipe</string>
    <string name="sair_do_jogo">Sair do Jogo</string>
    <string name="ativando_gps">Atualizando posição do GPS. Em ambientes indoor pode demorar um pouco. It is recommended that you go to a place where you can see the sky .</string>
    <string name="eu">Eu</string>
    <string name="buscando_jogos">Buscando jogos</string>
    <string name="buscar">Buscar jogos</string>
    <string name="distancia">Escolha uma distância limite:</string>
    <string name="title_activity_jogos_disponiveis">Tipos de jogos disponíveis</string>
    <string name="sem_jogos_disponiveis">Não existem jogos disponíveis a essa distância</string>
    <string name="gps_desativado">GPS desativado</string>
    <string name="gps_ativado">GPS ativado</string>
    <string name="nao_funciona_sem_gps"> não funcionará sem o sistema de localização ativado.</string>
    <string name="ativar">Ativar</string>
    <string name="obtendo_informacoes">Obtendo informações</string>
    <string name="enviando_informacoes">Enviando informações</string>
    <string name="title_activity_instancias_executando">Jogos executando</string>
    <string name="cancelar">Cancelar</string>
    <string name="jogo_criado">Jogo criado</string>
    <string name="jogo_iniciado">Jogo iniciado</string>
    <string name="nome_do_jogo">Nome do jogo</string>
    <string name="escolha_equipe">Escolha a sua equipe</string>
    <string name="registrando_jogador">Registrando jogador no jogo</string>
    <string name="erro_registrando_jogador">Erro ao registrar jogador no jogo</string>
    <string name="baixando_arquivos">Baixando arquivos necessários</string>
    <string name="baixando_arquivos_erro">Erro ao baixar arquivos necessários</string>
    <string name="ja_jogando">Você já está jogando essa partida.</string>
    <string name="deseja_sair">Tem certeza que deseja sair do jogo? \n Você perderá todo o progresso não salvo.</string>
    <string name="fim_de_jogo">Fim de Jogo</string>
    <string name="sem_missoes">Ainda não existem missões.</string>
    <string name="gravar_audio">Gravar audio</string>
    <string name="mecanica_liberada">Mecânicas: Liberada</string>
    <string name="mecanica_bloqueada"> Bloqueada</string>
    <string name="mecanica_realizada"> Realizada</string>
    <string name="enviar">Enviar</string>
    <string name="gravando">Gravando</string>
    <string name="arquivo_enviado">Arquivo enviado</string>
    <string name="enviando_metadados">Enviando metadados</string>
    <string name="digite_texto">Digite o texto a ser enviado</string>
    <string name="mecanica_nao_liberada">Você deve andar até o local da mecânica.</string>
    <string name="title_activity_tab_host" translatable="false">@string/app_name</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="erro_formatacao_dados">Erro na formatação dos dados a serem enviados</string>
    <string name="nao_pode_realizar_mec">Voce não possui pontos/life o suficiente para realizar essas mecânica.</string>
    <string name="objeto_invalido">Escolha um objeto que corresponde a ação</string>
    <string name="reproduzir">Reproduzir</string>
    <string name="reproduzindo">Reproduzindo...</string>
    <string name="title_activity_inventario" translatable="false">InventarioActivity</string>
    <string name="legenda">Legenda</string>
    <string name="nao_pode_capturar_jogador">Esse jogador não pode ser capturado</string>
    <string name="title_activity_configuracoes" translatable="false">ConfiguracoesActivity</string>
    <string name="escolha_jogador_title">Escolha o jogador</string>
    <string name="escolha_jogador_message">Escolha com quem voce vai compartilhar o objeto</string>
    <string name="objeto_compaartilhado">Objeto compartilhado com </string>
    <string name="sem_permissao_para_realizar_mecanica">Voce não tem permissão para realizar essa mecânica.</string>
    <string name="menu">Menu</string>
    <string name="caminhadas">Caminhar</string>
    <string name="cooperativo">Cooperar</string>
    <string name="conectar">Conectar</string>
    <string name="em_construcao">Ainda em construção</string>
    <string name="bode_ioio">Bode Ioio</string>
    <string name="calungueira" translatable="false">Calungueira</string>
    <string name="gato_pingado" translatable="false">Gato Pingado</string>
</resources>
