<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.great.jogopervasivo.actvititesDoJogo.LoginActivity">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/login_login_edit_text"
            android:layout_width="match_parent"
            android:textColor="@color/ab_color"
            android:layout_height="wrap_content"
            android:textColorHint="@color/ab_color"
            android:padding="@dimen/edit_text_padding"
            android:hint="@string/login"/>
        <EditText
            android:id="@+id/login_senha_edit_text"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding"
            android:textColorHint="@color/ab_color"
            android:textColor="@color/ab_color"
            android:hint="@string/senha"/>
        <TextView
            android:id="@+id/aindaNaoCadastradoTextView"
            android:layout_gravity="center"
            android:textSize="@dimen/texto_pequeno_FO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ainda_nao_cadastrado"/>

        <Button
            android:layout_marginTop="@dimen/padding_ab"
            android:layout_gravity="center"
            android:onClick="fazerLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/texto_grande"
            android:paddingLeft="@dimen/texto_grande"
            android:text="@string/entrar"/>
    </LinearLayout>

</RelativeLayout>
