<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundoTelaEscuro"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.great.jogopervasivo.actvititesDoJogo.activitiesFortalezaOculta.MenuCaminhadas">

    <TextView
        android:id="@+id/menu_caminhadas_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:text="@string/caminhadas" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menu_caminhadas_botao_bode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/tamanho_icone_menu"
                android:layout_height="@dimen/tamanho_icone_menu"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/bode_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bode_ioio" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_caminhadas_botao_calungueira"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/tamanho_icone_menu"
                android:layout_height="@dimen/tamanho_icone_menu"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/calung_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calungueira" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_caminhadas_botao_gato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/tamanho_icone_menu"
                android:layout_height="@dimen/tamanho_icone_menu"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/gato_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gato_pingado" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
