<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.great.jogopervasivo.actvititesDoJogo.TelaPrincipalActivity">

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/common_action_bar_splitter">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/mecanica_liberada" />

            <ImageView
                android:layout_width="@dimen/texto_grande"
                android:layout_height="@dimen/texto_grande"
                android:layout_gravity="center"
                android:src="@mipmap/ic_marcador_local"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/mecanica_realizada" />

            <ImageView
                android:layout_width="@dimen/texto_grande"
                android:layout_height="@dimen/texto_grande"
                android:layout_gravity="center"
                android:src="@mipmap/ic_bandeira_azul"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/mecanica_bloqueada" />

            <ImageView
                android:layout_width="@dimen/texto_grande"
                android:layout_height="@dimen/texto_grande"
                android:layout_gravity="center"
                android:src="@mipmap/ic_marcador_irlocais_rosa"
                />
        </LinearLayout>
    </HorizontalScrollView>


</RelativeLayout>
