<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/fundoTelaEscuro"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufc.great.activities.MenuJogos">


    <TextView
        android:id="@+id/menu_jogos_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:text="@string/menu" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menu_jogos_botao_caminhada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="@dimen/tamanho_icone_menu"
                android:layout_height="@dimen/tamanho_icone_menu"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/caminhadas_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caminhadas" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_jogos_botao_cooperativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="@dimen/tamanho_icone_menu"
                android:layout_height="@dimen/tamanho_icone_menu"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/cooperativo_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cooperativo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_jogos_botao_outro"
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/tamanho_icone_menu"
                android:layout_height="@dimen/tamanho_icone_menu"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/other_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="placeholder" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
